[gd_scene load_steps=5 format=3 uid="uid://dy7k7ee83ehvb"]

[ext_resource type="Texture2D" uid="uid://f280ryq6l11k" path="res://assets/interactive/movingplatform.png" id="1_63y8o"]
[ext_resource type="Script" path="res://src/interactive/fastmovingplatform.gd" id="1_g4c0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwn31"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wb73"]
size = Vector2(183, 105)

[node name="fastmovingplatform" type="CharacterBody2D"]
script = ExtResource("1_g4c0c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_63y8o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kwn31")

[node name="WallNear_Left" type="RayCast2D" parent="."]
position = Vector2(-24, 0)
target_position = Vector2(-40, 0)

[node name="WallNear_Right" type="RayCast2D" parent="."]
position = Vector2(24, 0)
target_position = Vector2(60, 0)

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2(-25, 0)
target_position = Vector2(-2, 0)

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2(25, 0)
target_position = Vector2(2, 0)

[node name="can_move" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="can_move"]
position = Vector2(0, -45)
shape = SubResource("RectangleShape2D_5wb73")

[connection signal="body_entered" from="can_move" to="." method="_on_can_move_body_entered"]
